Archive2/df/ba1949c0aebcde/output
main.cpp: In function 'void Move(int (*)[5])':
main.cpp:20:24: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
         if (arr[x][y]=1)
                        ^
main.cpp:22:25: error: expected identifier before '(' token
            if (x==1) && (y==1 or y==2) {}
                         ^
main.cpp:22:25: warning: taking the address of a label is non-standard [-Wpedantic]
